--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": false,
-  "name": "suyun-react-components",
+  "name": "sy-react-components",
   "version": "1.0.0",
   "license": "MIT",
   "homepage": "https://github.com/Lsuyun/suyun-react-components/",
