--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": false,
   "name": "sy-react-components",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "license": "MIT",
   "homepage": "https://github.com/Lsuyun/suyun-react-components/",
   "scripts": {
@@ -33,10 +33,10 @@
     ]
   },
   "dependencies": {
-    "antd": "^4.18.5",
     "react": "^16.12.0 || ^17.0.0",
     "react-dom": "^17.0.2",
-    "lodash": "^4.17.11"
+    "lodash": "^4.17.11",
+    "antd": "^4.18.5"
   },
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.13.8",
