--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "prepublishOnly": "npm run build"
   },
   "files": [
-    "dist"
+    "lib",
+    "es"
   ],
-  "main": "dist/index.js",
-  "module": "dist/index.js",
-  "typings": "dist/index.d.ts",
+  "main": "lib/index.js",
+  "module": "es/index.js",
+  "typings": "lib/index.d.ts",
   "gitHooks": {
     "pre-commit": "lint-staged"
   },
@@ -42,16 +43,18 @@
     "@babel/plugin-transform-modules-commonjs": "^7.13.8",
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^12.1.2",
-    "@types/react-dnd-html5-backend": "^3.0.2",
-    "babel-plugin-import": "^1.13.3",
     "@types/jest": "^27.0.3",
+    "@types/lodash": "^4.14.182",
+    "@types/react-dnd-html5-backend": "^3.0.2",
     "@umijs/fabric": "^2.8.1",
     "@umijs/test": "^3.0.5",
+    "babel-plugin-import": "^1.13.3",
     "dumi": "^1.1.0",
     "father-build": "^1.17.2",
     "gh-pages": "^3.0.0",
     "lint-staged": "^10.0.7",
     "prettier": "^2.2.1",
+    "rollup-plugin-commonjs": "^10.1.0",
     "yorkie": "^2.0.0"
   }
 }
